<resources>
    <string name="app_name">Ladybug</string>
    <string name="profile">profile</string>
    <string name="food">food</string>
    <string name="sleep">sleep</string>
    <string name="exercise">exercise</string>
    <string name="stress">stress</string>
    <string name="homebutton">homeButton</string>
    <string name="days_to_period">Days to period</string>
    <string name="Days">14</string>
    <string name="record">SaveRecord</string>
    <string name="savedata">SaveData</string>
    <string name="record_food">Record Food</string>
    <string name="what_did_you_eat_today">What did you eat today?</string>
    <string name="record_your_food">Record your food!</string>
    <string name="view_your_history">View your history!</string>
    <string name="recordsleep">RecordSleep</string>
    <string name="record_your_sleep">Record your sleep!</string>
    <string name="How_did_you_sleep_last_night">How did you sleep last night?</string>
    <string name="record_your_exercise">Record your exercise!</string>
    <string name="did_you_work_out_today">Did you work out today?</string>
    <string name="recordexercise">RecordExercise</string>
    <string name="what_is_your_stress_level_today">What is your stress level today?</string>
    <string name="record_your_stress">record your stress!</string>
    <string name="recordstress">RecordStress</string>
    <string name="select_your_exercise_status">Select your exercise status:</string>
    <string name="tell_us_about_your_exercise">Tell us about your exercise!</string>
    <string name="if_you_workout_how_long">If you workout, how long?</string>
    <string name="mins">mins</string>
    <string name="enter_your_weight">Enter your weight:</string>
    <string name="lbs">lbs</string>
    <string name="normal">Normal</string>
    <string name="bad">Bad</string>
    <string name="good">Good</string>
    <string name="sleep_quality">Sleep quality</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="please_enter_the_sleep_time">Please enter the sleep time</string>
    <string name="or">Or</string>
    <string name="i_am_waked">I am awake</string>
    <string name="i_am_going_to_sleep">I am going to sleep</string>
    <string name="appleimage">appleimage</string>
    <string name="rice">rice</string>
    <string name="eggimage">eggimage</string>
    <string name="oatmealimage">oatmealimage</string>
    <string name="milkshakeimage">milkshakeimage</string>
    <string name="almondimage">almondimage</string>
    <string name="burgerimage">burgerimage</string>
    <string name="cheesecakeimage">cheesecakeimage</string>
    <string name="chocolatebarimage">chocolatebarimage</string>
    <string name="icecream_image">icecream_image</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="have_breakfast">Have Breakfast?</string>
    <string name="_0">0</string>
    <string name="profileimage">ProfileImage</string>
    <string name="user_id">User ID</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="record_your_cycle_here">Record your cycle here!</string>
    <string name="view_past_status">View Past status</string>
    <string name="view_cycle_record">View cycle record</string>
    <string name="does_the_period_start_today">Does the period start today?</string>
    <string name="tell_us_when_does_your_period_start_and_end">Tell us when does your period start and end!</string>
    <string name="does_the_period_end_today">Does the period end today?</string>
    <string name="period_knowledge">period_knowledge</string>
    <string name="exercisepic">exercisePic</string>
    <string name="tell_us_about_your_stress_level">Tell us about your stress level!</string>
    <string name="emotionpic">emotionPic</string>
    <string name="relaxed">Relaxed</string>
    <string name="a_little_stressed">A little stressed</string>
    <string name="medium">Medium</string>
    <string name="extremely_anxious">Extremely Anxious</string>
    <string name="stressed">Stressed</string>
    <string name="are_you_going_to_sleep">Are you going to sleep?</string>
    <string name="yep">Yep</string>
    <string name="are_you_wake_up">Are you wake up?</string>
    <string name="tell_us_about_your_sleep">Tell us about your sleep!</string>
    <string name="are_you_awake">Are you awake?</string>
    <string name="save">Save</string>
    <string name="tell_us_what_did_you_eat">Tell us what did you eat!</string>
    <string name="level_1_5">Level 1-5</string>
    <string name="level_6_10">Level 6-10</string>
    <string name="sleep_history">Sleep History</string>
    <string name="sleeppic">SleepPic</string>
    <string name="food_history">Food History</string>
    <string name="stress_history">Stress History</string>
    <string name="cycle_history">Cycle History</string>
    <string name="exercise_history">Exercise History</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="feet">feet</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="end_date_of_last_period">End date of last period</string>
    <string name="start_date_of_last_period">Start date of last period</string>
    <string name="normal_cycle_length">Normal cycle length</string>
    <string name="number_of_days_default_28">Number of days: (default=28)</string>
    <string name="normal_period_length">Nomal period length</string>
    <string name="number_of_days_default_7">Number of days: (defult=7)</string>
    <string name="new_user_enter_your_period_info">New user? Enter your period info</string>
    <string name="past_states_history_recommendations"><![CDATA[Past States History & Recommendations]]></string>
    <string name="welcome_to_ladybug">Welcome to Ladybug!</string>
    <string name="todo">TODO</string>
    <string name="ladybug">Ladybug</string>
    <string name="view_recommendations_summaries"><![CDATA[view recommendations & summaries!]]></string>
    <string name="recommendations_summaries"><![CDATA[Recommendations & Summaries]]></string>


</resources>
