<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:labelVisibilityMode="labeled">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/ic_action_food"
        android:title="@string/food" />
    <item
        android:id="@+id/navigation_sleep"
        android:icon="@drawable/ic_action_sleep"
        android:title="@string/sleep" />
    <item
        android:id="@+id/navigation_exercise"
        android:icon="@drawable/ic_action_exericise"
        android:title="@string/exercise" />
    <item
        android:id="@+id/navigation_stress"
        android:icon="@drawable/ic_action_stress"
        android:title="@string/stress" />
</menu>