<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Record_Food">

    <SeekBar
        android:id="@+id/food_seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="530dp"
        android:layout_height="42dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="80dp"
        android:max="9"
        android:progress="0"
        android:rotation="90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appleimage"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="200dp"
        android:contentDescription="@string/appleimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imageview_apple" />

    <ImageView
        android:id="@+id/eggimage"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginEnd="200dp"
        android:contentDescription="@string/eggimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appleimage"
        app:srcCompat="@drawable/egg" />

    <ImageView
        android:id="@+id/oatmealimage"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginEnd="200dp"
        android:contentDescription="@string/oatmealimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eggimage"
        app:srcCompat="@drawable/oatmeal" />

    <ImageView
        android:id="@+id/milkshakeimage"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/milkshakeimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/milkshake" />

    <ImageView
        android:id="@+id/almondimage"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/almondimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milkshakeimage"
        app:srcCompat="@drawable/almond" />

    <ImageView
        android:id="@+id/burgerimage"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/burgerimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/almondimage"
        app:srcCompat="@drawable/burger" />

    <ImageView
        android:id="@+id/cheesecakeimage"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/cheesecakeimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burgerimage"
        app:srcCompat="@drawable/cheesecake" />

    <ImageView
        android:id="@+id/chocolatebarimage"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/chocolatebarimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheesecakeimage"
        app:srcCompat="@drawable/chocolatebar" />

    <ImageView
        android:id="@+id/icecream_image"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginEnd="200dp"
        android:contentDescription="@string/icecream_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riceimage"
        app:srcCompat="@drawable/icecream" />

    <ImageView
        android:id="@+id/riceimage"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginEnd="200dp"
        android:contentDescription="@string/rice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oatmealimage"
        app:srcCompat="@drawable/rice" />

    <Button
        android:id="@+id/food_record_button"
        android:layout_width="56dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="casual"
        android:onClick="FoodonClick"
        android:text="@string/save"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"

        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/Breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="85dp"
        android:checkedButton="@+id/breakfast_yes"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/breakfast_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/yes"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/breakfast_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/no"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="15sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="casual"
        android:text="@string/have_breakfast"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icecream_image" />

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="293dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text="@string/tell_us_what_did_you_eat"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Level1-5"
        android:layout_width="117dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="casual"
        android:text="@string/level_1_5"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toStartOf="@+id/Level6-10"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText" />

    <TextView
        android:id="@+id/Level6-10"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:text="@string/level_6_10"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText" />


</android.support.constraint.ConstraintLayout>