<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/sleeo_quality_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_record_text_3">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="110dp"
            android:layout_height="54dp"
            android:layout_marginStart="80dp"
            android:text="@string/bad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="1dp"
            android:text="@string/normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="110dp"
            android:layout_height="58dp"
            android:layout_marginStart="80dp"
            android:text="@string/good"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sleep_record_text_3" />
    </RadioGroup>

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="362dp"
        android:layout_height="34dp"
        android:layout_marginTop="60dp"
        android:fontFamily="casual"
        android:text="@string/tell_us_about_your_sleep"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sleep_record_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="176dp"
        android:fontFamily="casual"
        android:text="@string/are_you_going_to_sleep"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sleep_record_text_3"
        android:layout_width="244dp"
        android:layout_height="31dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="84dp"
        android:text="@string/sleep_quality"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton6" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="60dp"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="60dp"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <TextView
        android:id="@+id/sleep_record_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="casual"
        android:text="@string/are_you_awake"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toStartOf="@+id/radioButton6"
        app:layout_constraintTop_toBottomOf="@+id/sleep_record_text_1" />

    <Button
        android:id="@+id/SaveSleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <Button
        android:id="@+id/SaveAwake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton6" />

</android.support.constraint.ConstraintLayout>

