<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <SeekBar
        android:id="@+id/emotion_seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="436dp"
        android:layout_height="501dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="132dp"
        android:max="4"
        android:progress="0"
        android:rotation="90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="362dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/tell_us_about_your_stress_level"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Relaxed"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="casual"
        android:text="@string/relaxed"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText" />

    <TextView
        android:id="@+id/ALittleStressed"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="casual"
        android:text="@string/a_little_stressed"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Relaxed" />

    <TextView
        android:id="@+id/Medium"
        android:layout_width="209dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="casual"
        android:text="@string/medium"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ALittleStressed" />

    <TextView
        android:id="@+id/Stressed"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="casual"
        android:text="@string/stressed"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Medium" />

    <TextView
        android:id="@+id/ExtremeStressed"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="casual"
        android:text="@string/extremely_anxious"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Stressed" />

    <Button
        android:id="@+id/food_stress_button"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="casual"
        android:onClick="StressonClick"
        android:text="@string/save"

        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExtremeStressed" />

</android.support.constraint.ConstraintLayout>