<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/exercise_type_spinner"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PromptTypeText" />

    <TextView
        android:id="@+id/PromptTypeText"
        android:layout_width="260dp"
        android:layout_height="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/select_your_exercise_status"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText" />

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="305dp"
        android:layout_height="35dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="129dp"
        android:fontFamily="casual"
        android:text="@string/tell_us_about_your_exercise"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PromptWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/if_you_workout_how_long"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_type_spinner" />

    <EditText
        android:id="@+id/Time_Input"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="190dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mins"
        android:inputType="time"
        android:fontFamily="casual"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PromptWeightText" />

    <TextView
        android:id="@+id/PromtWeightText"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/enter_your_weight"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time_Input" />

    <EditText
        android:id="@+id/Weight_Input"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="190dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lbs"
        android:inputType="numberDecimal"
        android:fontFamily="casual"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PromtWeightText" />

    <Button
        android:id="@+id/exercise_record_save"
        android:layout_width="74dp"
        android:layout_height="52dp"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="casual"
        android:lineSpacingExtra="52sp"
        android:onClick="onClick"
        android:text="@string/save"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>